--- a/app/views/account.html
+++ b/app/views/account.html
@@ -4,10 +4,10 @@
   <h3>Profile</h3>
 
   <form role="form">
-    <p class="form-group">
+    <!-- <p class="form-group">
       <label>Account ID</label>
       <br />{{user.uid}}
-    </p>
+    </p> -->
 
     <p class="form-group">
       <label>Name:</label>
@@ -16,7 +16,7 @@
 
     <p class="form-group">
       <label>Email:</label>
-      <br />{{profile.email}}
+      <br />{{user.password.email}}
     </p>
   </form>
 
