polish on taxonomization view in sandbox

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -5,3 +5,4 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
 @import "_app.scss";
 @import "_colorpicker.scss";
 @import "_charts.scss";
+@import "_taxonomization.scss";
