--- a/app/views/sandbox.html
+++ b/app/views/sandbox.html
@@ -1,19 +1,1 @@
-<p><b>Categorization Types</b> + Categories:</p>
-<hr/>
-<ul id="taxn-ctrls">
-	<li ng-repeat="tax in taxTree.taxonomies">
-		<input ng-model="tax.name" class="form-control-NOT" style="margin-bottom:.5em; width:200px; font-weight:bold;">
-		<ul>
-			<li ng-repeat="term in tax.terms" style="margin-bottom:.5em;">
-				<input ng-model="term.name" class="form-control-NOT" style="width:200px">
-			</li>
-			<li style="margin-bottom:1.5em;">
-				<label class="btn btn-primary btn-med" ng-click="taxn.addNewTermTo(tax);" style="padding: 3px 9px;">New Category</label>
-				
-			</li>
-		</ul>
-	</li>
-	<li>
-		<label class="btn btn-primary btn-med" ng-click="taxn.addNewTax();" style="padding: 3px 9px;"><b>New Categorization Type</b></label>
-	</li>
-</ul>
+<p> This is the sandbox view... but do you really want to use it? </p>
