set up new taxonomy function

--- a/app/views/categories.html
+++ b/app/views/categories.html
@@ -17,3 +17,7 @@
 		<label class="btn btn-primary btn-med" ng-click="taxn.addNewTax();" style="padding: 3px 9px;"><b>New Categorization Type</b></label>
 	</li>
 </ul>
+<pre>
+DEV-TODO: 
+- Only save and sort the items after typing is completed. It's annoying to have it jump partway through.
+</pre>
