--- a/app/styles/_app.scss
+++ b/app/styles/_app.scss
@@ -111,3 +111,10 @@ hr {
     border-top: 1px solid rgba(0, 0, 0, 0.1);
     border-bottom: 1px solid rgba(255, 255, 255, 0.3);
 }
+
+pre {
+  margin-top: 2em;
+  opacity: .5;
+  word-wrap: normal;
+  word-break: normal;
+}
