--- a/app/views/categories.html
+++ b/app/views/categories.html
@@ -20,4 +20,6 @@
 <pre>
 DEV-TODO: 
 - Only save and sort the items after typing is completed. It's annoying to have it jump partway through.
+- Allow deletion of categories and category-types, including removal of those categories from recipient organizations.
+- Work with Skip, Jim, Alsa to plan default categorizations, and how users adopt and modify those categorizations.
 </pre>
