start of taxonomization controls in place

--- a/app/views/categories.html
+++ b/app/views/categories.html
@@ -45,4 +45,5 @@ DEV-TODOS:
 - Allow deletion of categories and category-types, including removal of those categories from recipient organizations.
 - Work with Skip, Jim, Alsa to plan default categorizations, and how users adopt and modify those categorizations.
 - Allow manual ordering of categories and categorization-types
+- Allow tabbing to "New..." buttons
 </pre>
