nailed donutPie design, more comments

--- a/app/views/givingchartcategorized.html
+++ b/app/views/givingchartcategorized.html
@@ -1,2 +1,15 @@
 demo-categorized-chart:
-<div id="demo-categorized-chart"></div>
+<div class="row">
+	<div class="col-md-6">
+		<div class="panel panel-default">
+			<div class="panel-body">
+				CONTROLS
+			</div>
+		</div>
+	</div>
+	<div class="col-md-6">
+		<div class="panel-NOT panel-default-NOT">
+			<div id="demo-categorized-chart"></div>
+		</div>
+	</div>
+</div>
