more polish and notes on catChart display

--- a/app/views/givingchartcategorized.html
+++ b/app/views/givingchartcategorized.html
@@ -1,9 +1,26 @@
-demo-categorized-chart:
 <div class="row">
 	<div class="col-md-6">
 		<div class="panel panel-default">
 			<div class="panel-body">
-				CONTROLS
+				<pre>
+SOME CONTROLS WILL GO HERE. 
+
+	NAMELY, THE CONTROLS FOR EDITING A CATEGORY! 
+
+		(NAME, COLOR, ALSO OVERVIEWS, LIST OF ORGS and GIVING)
+
+Whoah... I wonder... 
+
+I suppose we should be able to link to an individual org from that view... right? 
+
+	And vice versa, go to an individual category? 
+
+		(with the pencil icon?)
+
+Eventually I'll plop these controls into the 'portfolio' view.
+
+... I'm really starting to feel like that view is HUGE ... and like perhaps it should be broken down a bit ... I wonder what Angular offers in the way of chunked views / view parts.
+				</pre>
 			</div>
 		</div>
 	</div>
