note about ng-include on portfolio.html

--- a/app/views/portfolio.html
+++ b/app/views/portfolio.html
@@ -1,5 +1,7 @@
 <!-- Big Text Art: http://patorjk.com/software/taag/ - Font Name: ANSI Shadow -->
 <!-- Little Text Art: http://fsymbols.com/generators/tarty/ - enbale "Brighter" -->
+<!-- Better Yet: break up templates into smaller pieces: http://stackoverflow.com/questions/16397748/split-angular-template-into-multiple-small-templates -->
+
 
 <!-- 
  ██████╗██╗  ██╗ █████╗ ██████╗ ████████╗
