migrated givingChartCategorized from ctrl into service

--- a/app/views/givingchartcategorized.html
+++ b/app/views/givingchartcategorized.html
@@ -26,7 +26,7 @@ Eventually I'll plop these controls into the 'portfolio' view.
 	</div>
 	<div class="col-md-6">
 		<div class="panel-NOT panel-default-NOT">
-			<div id="demo-categorized-chart"></div>
+			<highchart id="givingChartCategorized" config="donutPie.config"></highchart>
 		</div>
 	</div>
 </div>
