chart displays only when scope.Pie exists

--- a/app/views/portfolio.html
+++ b/app/views/portfolio.html
@@ -12,7 +12,7 @@
  ╚═════╝╚═╝  ╚═╝╚═╝  ╚═╝╚═╝  ╚═╝   ╚═╝    -->
 
 <div class="col-sm-6 col-sm-push-6">
-	<highchart id="givingChartFlat" config="pie.config"></highchart>
+	<highchart ng-if="pie" id="givingChartFlat" config="pie.config"></highchart>
 	<!-- <highchart id="givingChartCategorized" config="donut.config"></highchart> --><!-- ng-if-NOT="{ ! chart~category } -->
 	<!-- ng-if-NOT="{ chart~category }" -->
 	<div class="panel text-center">
