--- a/app/views/portfolio.html
+++ b/app/views/portfolio.html
@@ -12,6 +12,7 @@
  ╚═════╝╚═╝  ╚═╝╚═╝  ╚═╝╚═╝  ╚═╝   ╚═╝    -->
 
 <div class="col-sm-6 col-sm-push-6">
+	<!-- <highchart-spacer></highchart-spacer> TODO/COMING SOON-->
 	<highchart ng-if="pie" id="givingChartFlat" config="pie.config"></highchart>
 	<!-- <highchart id="givingChartCategorized" config="donut.config"></highchart> --><!-- ng-if-NOT="{ ! chart~category } -->
 	<!-- ng-if-NOT="{ chart~category }" -->
