--- a/app/views/portfolio.html
+++ b/app/views/portfolio.html
@@ -14,7 +14,7 @@
 <div class="col-sm-6 col-sm-push-6">
 	<!-- <highchart-spacer></highchart-spacer> TODO/COMING SOON-->
 	<highchart ng-if="pie" id="givingChartFlat" config="pie.config"></highchart>
-	<!-- <highchart id="givingChartCategorized" config="donut.config"></highchart> --><!-- ng-if-NOT="{ ! chart~category } -->
+	<highchart ng-if="donutPie" id="givingChartCategorized" config="donutPie.config"></highchart>
 	<!-- ng-if-NOT="{ chart~category }" -->
 	<div class="panel text-center">
 		<sp/>
