used taxn property as model for selectedTax

--- a/app/views/portfolio.html
+++ b/app/views/portfolio.html
@@ -205,7 +205,7 @@
 								<div class="input-group">
 									<div class="input-group-btn" style="font-size:12px">
 										<!-- <input type="checkbox"/> -->
-										<button class="btn btn-default btn-sm" ng-model="selTax" btn-radio="tax" type="submit">{{ tax.name }}</button>
+										<button class="btn btn-default btn-sm" ng-model="taxn.selectedTax" btn-radio="tax" type="submit">{{ tax.name }}</button>
 									</div>
 									<span style="display:none;">currently: {{ orgs.selectedOrg.taxTerms[taxId] }}</span>
 									<select 
