--- a/app/views/portfolio.html
+++ b/app/views/portfolio.html
@@ -205,12 +205,20 @@
 								<div class="input-group">
 									<div class="input-group-btn" style="font-size:12px">
 										<!-- <input type="checkbox"/> -->
-										<button class="btn btn-default btn-sm" ng-model="taxn.selectedTax" btn-radio="tax" type="submit">{{ tax.name }}</button>
+										<button 
+											ng-model="taxn.selectedTax"
+											btn-radio="tax"
+											ng-change="taxn.selectedTax = tax; orgs.pushOrgState(orgs.selectedOrg);"
+											type="submit"
+											class="btn btn-default btn-sm"
+										>
+											{{ tax.name }}
+										</button>
 									</div>
 									<span style="display:none;">currently: {{ orgs.selectedOrg.taxTerms[taxId] }}</span>
 									<select 
 										ng-model="orgs.selectedOrg.taxTerms[taxId]"
-										ng-change="orgs.pushOrgState(orgs.selectedOrg);"
+										ng-change="taxn.selectedTax = tax; orgs.pushOrgState(orgs.selectedOrg);"
 										class="form-control input-sm"
 									>
 										<!-- todo... let it be just `org` rather than `orgs.selectedOrg`.... -->
