trying to make category uncheckable

--- a/app/views/portfolio.html
+++ b/app/views/portfolio.html
@@ -208,6 +208,7 @@
 										<button 
 											ng-model="taxn.selectedTax"
 											btn-radio="tax"
+											uncheckable
 											ng-change="taxn.selectedTax = tax; orgs.pushOrgState(orgs.selectedOrg);"
 											type="submit"
 											class="btn btn-default btn-sm"
