make nicer todos header

--- a/app/views/categories.html
+++ b/app/views/categories.html
@@ -51,7 +51,7 @@
 
 
 <pre>
-DEV-TODOS: 
+FEATURES AND FIXES FOR FUTURE DEVELOPMENT: 
 - Only save and sort the items after typing is completed. It's annoying to have it jump partway through.
 - Allow deletion of categories and category-types, including removal of those categories from recipient organizations.
 - Work with Skip, Jim, Alsa to plan default categorizations, and how users adopt and modify those categorizations.
