--- a/app/views/portfolio.html
+++ b/app/views/portfolio.html
@@ -290,7 +290,7 @@
 
 <sp/>
 <pre>
-DEV-TODOS:
+FEATURES AND FIXES FOR FUTURE DEVELOPMENT:
 - Orgs' category selections, category-based donut charts!
 - Display the %-giving-budget-usage as pretty horizontal completion-bar
 - Don't require budget as a prerequesite for portfolio/organizations input. Rather, do something like "Input your desired giving budget to show % of budget usage".
