tax/categorization controls back to being 2 columns

--- a/app/views/portfolio.html
+++ b/app/views/portfolio.html
@@ -222,9 +222,9 @@
 					<sp/>
 					<div class="row"><!-- one 'row', possibility of much repeating -->
 						<div class="tax-{{taxId}}" ng-repeat="(taxId,tax) in taxTree.taxonomies">
-							<div class="col-xs-12">
+							<div class="col-xs-6">
 								<div class="input-group">
-									<div class="input-group-btn" style="font-size:12px">
+									<div class="input-group-btn">
 										<!-- <input type="checkbox"/> -->
 										<button 
 											ng-model="taxn.selectedTax"
